@@ -1,3 +1,5 @@
+  - add discrete error checking pertaining to $cache_dir
+    and $compile_dir, their existance and writability (Monte)
   - fixed behaviour of start=... for {counter} (messju)
   - fixed assign for {counter} (messju)
   - added params vdir, hdir and inner to html_table to allow looping
